@@ -1,3 +1,8 @@
+2000-08-27  Mark Kettenis  <kettenis@gnu.org>
+
+	* gregset.h: Protect against multiple inclusion.  Remove some
+	redundant spaces.
+
 Sun Aug 27 00:00:04 2000  Christopher Faylor <cgf@cygnus.com>
 
 	* win32-nat.c (dll_symbol_command): Tack a .dll on the end of a
